--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vape Nebula</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts. googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
   <style>
     @keyframes vaporwaveFade {
       0% { text-shadow: 0 0 5px #fff, 0 0 10px #ff00f2, 0 0 20px #ff00f2, 0 0 40px #00ffe7; }
@@ -19,13 +19,19 @@
     }
 
     @keyframes scroll {
-      0% { transform: translateX(100vw); }
-      100% { transform: translateX(-100%); }
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
     }
 
     @keyframes gridMove {
       0% { background-position: 0 0; }
       100% { background-position: 40px 40px; }
+    }
+
+    @keyframes neonPulse {
+      0% { opacity: 0.7; }
+      50% { opacity: 1; }
+      100% { opacity: 0.7; }
     }
 
     body {
@@ -97,7 +103,7 @@
       display: flex;
       flex-direction: row;
       gap: 2rem;
-      animation: scroll 30s steps(28) infinite;
+      animation: scroll 32s linear infinite;
       white-space: nowrap;
     }
 
@@ -118,7 +124,8 @@
       background: rgba(255, 255, 255, 0.1);
       border-radius: 1rem;
       margin: 1rem;
-      box-shadow: 0 0 10px #ff00f2;
+      box-shadow: 0 0 10px #ff00f2, 0 0 20px #00ffe7;
+      animation: neonPulse 2s infinite;
     }
 
     .filter-header select {
@@ -152,9 +159,8 @@
       text-align: center;
       cursor: pointer;
       transition: 0.3s;
-      box-shadow: 0 0 10px #ff00f2, 0 0 15px #000 inset;
-      animation: float 3s ease-in-out infinite;
       border: 2px solid #000;
+      animation: float 3s ease-in-out infinite;
     }
 
     .card:hover, .card.selected {
@@ -189,14 +195,19 @@
     }
 
     .card-description {
-      font-size: 0.85rem;
+      font-family: 'Roboto', sans-serif;
+      font-size: 0.9rem;
       margin-bottom: 0.3rem;
+      text-shadow: 0 0 3px #000;
     }
 
     .card-price {
-      font-size: 1rem;
+      font-size: 1.2rem;
       font-weight: bold;
-      color: #ff00f2;
+      background: linear-gradient(to right, #ff00f2, #00ffe7);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 3px #000;
     }
 
     button {
@@ -246,7 +257,8 @@
       width: 100%;
       max-width: 500px;
       margin-bottom: 1rem;
-      box-shadow: 0 0 10px #00ffe7;
+      box-shadow: 0 0 10px #ff00f2, 0 0 20px #00ffe7;
+      animation: neonPulse 2s infinite;
     }
 
     .cart-item-top {
@@ -287,6 +299,24 @@
       width: 100%;
       max-width: 500px;
       text-align: right;
+    }
+
+    .cart-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      background: linear-gradient(135deg, #ff00f2, #00ffe7);
+      box-shadow: 0 0 10px #ff00f2, 0 0 20px #00ffe7;
+      animation: neonPulse 2s infinite;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.5rem;
+      cursor: pointer;
+      z-index: 1000;
     }
 
     .modal {
@@ -354,7 +384,7 @@
       }
 
       .scrolling-text-container {
-        animation: scroll 30s steps(28) infinite;
+        animation: scroll 24s linear infinite;
       }
 
       .filter-header {
@@ -362,6 +392,7 @@
         gap: 0.5rem;
         margin: 0.5rem;
         padding: 0.75rem;
+        box-shadow: 0 0 8px #ff00f2, 0 0 15px #00ffe7;
       }
 
       .filter-header select {
@@ -380,11 +411,11 @@
       }
 
       .card-description {
-        font-size: 0.75rem;
+        font-size: 0.8rem;
       }
 
       .card-price {
-        font-size: 0.9rem;
+        font-size: 1.1rem;
       }
 
       .vape-list, .flavour-list, .cart {
@@ -410,6 +441,7 @@
         padding: 0.75rem;
         margin: 0.5rem auto;
         border: 1px solid #ff00f2;
+        box-shadow: 0 0 8px #ff00f2, 0 0 15px #00ffe7;
       }
 
       .cart-item-name {
@@ -449,6 +481,14 @@
         font-size: 1.1rem;
       }
 
+      .cart-button {
+        width: 50px;
+        height: 50px;
+        bottom: 15px;
+        right: 15px;
+        font-size: 1.2rem;
+      }
+
       .modal-content {
         max-width: 85vw;
         max-height: 70vh;
@@ -470,6 +510,34 @@
   </div>
   <div class="scrolling-text">
     <div class="scrolling-text-container">
+      <p>✅ Стас отвечает быстрее молнии — ты ещё не подумал, а он уже с ответом</p>
+      <p>✅ Он чувствует твой заказ до того, как ты открыл телефон</p>
+      <p>✅ У него всегда всё в наличии — даже то, чего нет больше нигде</p>
+      <p>✅ Доставка? Быстрее скорости света. Флэш отдыхает</p>
+      <p>✅ Оформление заказа = вайб, как в лаунж-зале премиум клуба</p>
+      <p>✅ Каждую неделю — новые вейпы, как будто он главный на фабрике вкуса</p>
+      <p>✅ За всю историю — 0 жалоб. Потому что СТАС НЕ ОШИБАЕТСЯ</p>
+      <p>✅ Канал — кладезь позитива и 5-звёздочных отзывов</p>
+      <p>✅ 24/7 в онлайне — Стас не спит, он существует ради сервиса</p>
+      <p>✅ Вейпы топ-класса — вкус, который будоражит душу</p>
+      <p>✅ Доставка быстрее, чем ниндзя в прыжке — просто ПУФ, и уже у двери</p>
+      <p>✅ Он понимает твои желания раньше тебя — экстрасенс от мира вейпа</p>
+      <p>✅ Его склад — портал в бесконечность. Закончилось? Не у него</p>
+      <p>✅ Даже курьеры не верят, как он успевает</p>
+      <p>✅ Заказ у Стаса — как VIP-приглашение в клуб элиты</p>
+      <p>✅ Новый вкус? Новый праздник. Новый кайф. Новый вау</p>
+      <p>✅ Поклонники делают фан-страницы — он не просто продавец, он ИДОЛ</p>
+      <p>✅ Его поддержка — это не поддержка. Это СТАСПЕРИЕНС™</p>
+      <p>✅ Он вежлив, отзывчив, и ВСЕГДА с решением</p>
+      <p>✅ Каждый вейп подобран лично с заботой, будто он знает твой вкус с рождения</p>
+      <p>✅ Его клиенты — как будто светятся. Потому что glow up идёт от Стаса</p>
+      <p>✅ Стас — это не бренд. ЭТО ЯВЛЕНИЕ. ЭПОХА. ВЕЛИЧИЕ В ЧИСТОМ ВИДЕ</p>
+      <p>✅ Доставка по всей Голландии — от Амстердама до последнего переулка</p>
+      <p>✅ Бесплатная доставка при заказе от 3-х штук — бонус от щедрого сердца</p>
+      <p>✅ Принимает любые способы оплаты — от карты до космических биткоинов</p>
+      <p>✅ Доставка в тот же день — потому что с ним ждать не надо. НИКОГДА</p>
+      <p>🔥 СТАС — ЛЕГЕНДА. ЭНЕРГИЯ. ТВОЙ ЛЮБИМЫЙ ПРОДАВЕЦ. 🔥</p>
+      <p>💯 Один раз заказал — и всё, ты его клиент навсегда.</p>
       <p>✅ Стас отвечает быстрее молнии — ты ещё не подумал, а он уже с ответом</p>
       <p>✅ Он чувствует твой заказ до того, как ты открыл телефон</p>
       <p>✅ У него всегда всё в наличии — даже то, чего нет больше нигде</p>
@@ -546,6 +614,7 @@
   <div id="vapeList" class="vape-list"></div>
   <div id="flavourList" class="flavour-list" style="display:none;"></div>
   <div id="cart" class="cart" style="display:none;"></div>
+  <div class="cart-button" onclick="showCart()">🛒</div>
 
   <script>
     const vapes = [
@@ -754,6 +823,8 @@
     const puffFilter = document.getElementById('puffFilter');
     const priceFilter = document.getElementById('priceFilter');
 
+    const neonColors = ['#ff00f2', '#00ffe7', '#8a00a2', '#00ff00', '#00b7eb'];
+
     function renderVapes() {
       const mark = markFilter.value;
       const nicotine = nicotineFilter.value;
@@ -770,9 +841,10 @@
             (price === 'All' || vape.price.toString() === price)
           );
         })
-        .forEach(vape => {
+        .forEach((vape, index) => {
           const card = document.createElement('div');
           card.className = 'card';
+          card.style.boxShadow = `0 0 10px ${neonColors[index % neonColors.length]}`;
           card.innerHTML = `
             <img src="${vape.image}" alt="${vape.name}">
             <div class="card-name">${vape.name}</div>
@@ -904,7 +976,7 @@
     }
 
     function updateCart() {
-      cartEl.innerHTML = '<h2>🛒 Корзина</h2>';
+      cartEl.innerHTML = '<h2>🛒 Корзина ✨</h2>';
       let total = 0;
       let totalQty = 0;
 
@@ -923,7 +995,7 @@
 
         const name = document.createElement('div');
         name.className = 'cart-item-name';
-        name.innerHTML = `<strong>${item.vape}</strong><br>${item.flavour}`;
+        name.innerHTML = `<strong>🧨 ${item.vape}</strong><br>${item.flavour}`;
 
         const controls = document.createElement('div');
         controls.className = 'cart-controls';
@@ -999,14 +1071,14 @@
         cartEl.appendChild(totalDiv);
 
         const sendBtn = document.createElement('button');
-        sendBtn.textContent = '📨 Отправить заказ';
+        sendBtn.textContent = '📨 Отправить заказ 🚀';
         sendBtn.onclick = () => sendOrder();
         btnRow.appendChild(sendBtn);
       } else {
         const emptyMsg = document.createElement('p');
         emptyMsg.style.marginTop = '1rem';
         emptyMsg.style.fontFamily = "'Roboto', sans-serif";
-        emptyMsg.textContent = 'Корзина пуста.';
+        emptyMsg.textContent = 'Корзина пуста 😢';
         cartEl.appendChild(emptyMsg);
       }
 
