--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       display: flex;
       flex-direction: row;
       gap: 2rem;
-      animation: scroll 32s linear infinite;
+      animation: scroll 8s linear infinite;
       white-space: nowrap;
     }
 
@@ -191,10 +191,8 @@
     .card-name {
       font-size: 1.2rem;
       font-weight: bold;
-      background: linear-gradient(to right, #ff00f2, #00ffe7);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 5px #000;
+      color: #ffffff;
+      text-shadow: 0 0 5px #ff00f2, 0 0 10px #00ffe7;
       margin-bottom: 0.3rem;
     }
 
@@ -209,10 +207,8 @@
     .card-price {
       font-size: 1.2rem;
       font-weight: bold;
-      background: linear-gradient(to right, #ff00f2, #00ffe7);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 3px #000;
+      color: #ffffff;
+      text-shadow: 0 0 3px #ff00f2, 0 0 8px #00ffe7;
     }
 
     button {
@@ -277,9 +273,8 @@
       font-family: 'Roboto', sans-serif;
       font-size: 1.1rem;
       font-weight: 700;
-      background: linear-gradient(to right, #ff00f2, #00ffe7);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      color: #ffffff;
+      text-shadow: 0 0 5px #ff00f2, 0 0 10px #00ffe7;
     }
 
     .cart-controls {
@@ -295,10 +290,8 @@
 
     .cart-item-price {
       font-size: 0.9rem;
-      background: linear-gradient(to right, #ff00f2, #00ffe7);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 3px #000;
+      color: #ffffff;
+      text-shadow: 0 0 3px #ff00f2, 0 0 8px #00ffe7;
     }
 
     .delivery-fee {
@@ -412,7 +405,7 @@
       }
 
       .scrolling-text-container {
-        animation: scroll 24s linear infinite;
+        animation: scroll 6s linear infinite;
       }
 
       .filter-header {
@@ -436,6 +429,7 @@
 
       .card-name {
         font-size: 1rem;
+        text-shadow: 0 0 3px #ff00f2, 0 0 8px #00ffe7;
       }
 
       .card-description {
@@ -444,6 +438,7 @@
 
       .card-price {
         font-size: 1.1rem;
+        text-shadow: 0 0 2px #ff00f2, 0 0 6px #00ffe7;
       }
 
       .vape-list, .flavour-list, .cart {
@@ -474,10 +469,12 @@
 
       .cart-item-name {
         font-size: 1rem;
+        text-shadow: 0 0 3px #ff00f2, 0 0 8px #00ffe7;
       }
 
       .cart-item-price {
         font-size: 0.9rem;
+        text-shadow: 0 0 2px #ff00f2, 0 0 6px #00ffe7;
       }
 
       .cart-controls button {
