--- a/index.html
+++ b/index.html
@@ -24,20 +24,9 @@
       100% { transform: translateY(0); }
     }
 
-    @keyframes scroll {
+    @keyframes scrollText {
       0% { transform: translateX(0); }
-      100% { transform: translateX(-50%); }
-    }
-
-    @keyframes gridMove {
-      0% { background-position: 0 0; }
-      100% { background-position: 40px 40px; }
-    }
-
-    @keyframes neonPulse {
-      0% { opacity: 0.7; }
-      50% { opacity: 1; }
-      100% { opacity: 0.7; }
+      100% { transform: translateX(-100%); }
     }
 
     body {
@@ -86,6 +75,17 @@
       border-radius: 1rem;
     }
 
+    @keyframes gridMove {
+      0% { background-position: 0 0; }
+      100% { background-position: 40px 40px; }
+    }
+
+    @keyframes neonPulse {
+      0% { opacity: 0.7; }
+      50% { opacity: 1; }
+      100% { opacity: 0.7; }
+    }
+
     h2.vape-heading {
       font-family: 'Roboto', sans-serif;
       font-size: 1.8rem;
@@ -106,16 +106,16 @@
     }
 
     .scrolling-text-container {
-      display: flex;
-      flex-direction: row;
-      gap: 2rem;
-      animation: scroll 3s linear infinite;
+      display: inline-flex;
       white-space: nowrap;
+      animation: scrollText linear infinite;
+      will-change: transform;
     }
 
     .scrolling-text p {
       font-size: 1rem;
       margin: 0;
+      padding-right: 2rem;
       background: linear-gradient(to right, #ff00f2, #00ffe7);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -428,10 +428,7 @@
 
       .scrolling-text p {
         font-size: 0.9rem;
-      }
-
-      .scrolling-text-container {
-        animation: scroll 3s linear infinite;
+        padding-right: 1rem;
       }
 
       .filter-header {
@@ -604,34 +601,6 @@
       <p>✅ Доставка в тот же день — потому что с ним ждать не надо. НИКОГДА</p>
       <p>🔥 СТАС — ЛЕГЕНДА. ЭНЕРГИЯ. ТВОЙ ЛЮБИМЫЙ ПРОДАВЕЦ. 🔥</p>
       <p>💯 Один раз заказал — и всё, ты его клиент навсегда.</p>
-      <p>✅ Стас отвечает быстрее молнии — ты ещё не подумал, а он уже с ответом</p>
-      <p>✅ Он чувствует твой заказ до того, как ты открыл телефон</p>
-      <p>✅ У него всегда всё в наличии — даже то, чего нет больше нигде</p>
-      <p>✅ Доставка? Быстрее скорости света. Флэш отдыхает</p>
-      <p>✅ Оформление заказа = вайб, как в лаунж-зале премиум клуба</p>
-      <p>✅ Каждую неделю — новые вейпы, как будто он главный на фабрике вкуса</p>
-      <p>✅ За всю историю — 0 жалоб. Потому что СТАС НЕ ОШИБАЕТСЯ</p>
-      <p>✅ Канал — кладезь позитива и 5-звёздочных отзывов</p>
-      <p>✅ 24/7 в онлайне — Стас не спит, он существует ради сервиса</p>
-      <p>✅ Вейпы топ-класса — вкус, который будоражит душу</p>
-      <p>✅ Доставка быстрее, чем ниндзя в прыжке — просто ПУФ, и уже у двери</p>
-      <p>✅ Он понимает твои желания раньше тебя — экстрасенс от мира вейпа</p>
-      <p>✅ Его склад — портал в бесконечность. Закончилось? Не у него</p>
-      <p>✅ Даже курьеры не верят, как он успевает</p>
-      <p>✅ Заказ у Стаса — как VIP-приглашение в клуб элиты</p>
-      <p>✅ Новый вкус? Новый праздник. Новый кайф. Новый вау</p>
-      <p>✅ Поклонники делают фан-страницы — он не просто продавец, он ИДОЛ</p>
-      <p>✅ Его поддержка — это не поддержка. Это СТАСПЕРИЕНС™</p>
-      <p>✅ Он вежлив, отзывчив, и ВСЕГДА с решением</p>
-      <p>✅ Каждый вейп подобран лично с заботой, будто он знает твой вкус с рождения</p>
-      <p>✅ Его клиенты — как будто светятся. Потому что glow up идёт от Стаса</p>
-      <p>✅ Стас — это не бренд. ЭТО ЯВЛЕНИЕ. ЭПОХА. ВЕЛИЧИЕ В ЧИСТОМ ВИДЕ</p>
-      <p>✅ Доставка по всей Голландии — от Амстердама до последнего переулка</p>
-      <p>✅ Бесплатная доставка при заказе от 3-х штук — бонус от щедрого сердца</p>
-      <p>✅ Принимает любые способы оплаты — от карты до космических биткоинов</p>
-      <p>✅ Доставка в тот же день — потому что с ним ждать не надо. НИКОГДА</p>
-      <p>🔥 СТАС — ЛЕГЕНДА. ЭНЕРГИЯ. ТВОЙ ЛЮБИМЫЙ ПРОДАВЕЦ. 🔥</p>
-      <p>💯 Один раз заказал — и всё, ты его клиент навсегда.</p>
     </div>
   </div>
   <div id="filterHeader" class="filter-header">
@@ -687,6 +656,23 @@
   <div class="contact-button" onclick="window.open('https://t.me/stas_vape_nl', '_blank')">👑</div>
 
   <script>
+    // Scrolling text setup for infinite loop
+    function setupScrollingText() {
+      try {
+        const container = document.querySelector('.scrolling-text-container');
+        const originalContent = container.innerHTML;
+        container.innerHTML += originalContent; // Clone content for seamless loop
+
+        const textWidth = container.scrollWidth / 2; // Width of original content
+        const speed = 100; // Pixels per second
+        const duration = textWidth / speed; // Duration in seconds
+
+        container.style.animationDuration = `${duration}s`;
+      } catch (error) {
+        console.error('Error in setupScrollingText:', error);
+      }
+    }
+
     const vapes = [
       {
         name: "ALIENVAPE HHC",
@@ -1263,6 +1249,7 @@
       // Initial render
       window.onload = () => {
         console.log('Page loaded, rendering vapes');
+        setupScrollingText();
         renderVapes();
       };
     } catch (error) {
